# MCP_Payment_idea

./: .env.example  .gitignore  README.md  RUN.md  db_init_log.txt  diagnose_aws.py  diagnostic_output.txt  ecosystem.config.js  initialize_db.py  pyproject.toml  requirements.txt  shutdown.bat  shutdown.sh  startup.bat  startup.sh  test_case_query_fix.py  verify_auth.py
.github/: SECRETS.md  copilot-instructions.md
.github/workflows/: README.md  deploy.yml
crew_ai_app/: __init__.py  crew.py  llm_config.py
crew_ai_app/agents/: __init__.py  case_query_agent.py  dispute_decision_agent.py  manager_agent.py  verification_agent.py
crew_ai_app/db/: __init__.py  dynamo_client.py
crew_ai_app/mem/: __init__.py
crew_ai_app/tasks/: __init__.py
crew_ai_app/utils/: __init__.py  s3_client.py
mcp/: __init__.py  http_server.py  log_manager.py  main.py  mcp_server.py
mcp/tools/: __init__.py  dynamo_query_tool.py  mcp_client_tool.py  mcp_http_client_tool.py
terraform/: .gitignore  README.md  SIMPLE_EC2_DEPLOYMENT_PLAN.md  deploy.ps1  dev.tfvars  ec2.tf  iam.tf  main.tf  outputs.tf  prod.tfvars  terraform.tfvars.example  variables.tf
web/: .env.local.example  .eslintrc.js  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AgentFlowVisualization.tsx  CardItem.tsx  CaseCard.tsx  ChatWindow.tsx  DetailedLogs.tsx  LiveLogs.tsx  MCPQueryDemo.tsx  TransactionTable.tsx
web/components/ui/: badge.tsx  button.tsx  (+4 more)
web/lib/: api-client.ts  card-network.ts  log-context.tsx  mask-utils.ts  utils.ts
